--- a/app/src/main/res/layout/activity_test_module.xml
+++ b/app/src/main/res/layout/activity_test_module.xml
@@ -1,54 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.flexbox.FlexboxLayout android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    app:flexWrap="wrap"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
 
-        <TextView
-            android:text="吉他谱"
-            android:id="@+id/jita_tv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:layout_marginLeft="8dp"
-            android:background="@drawable/selector_item_tag"
-            android:padding="8dp"
-            android:textSize="13sp" />
-
-        <TextView
-            android:text="简谱"
-            android:id="@+id/jianpu_tv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:layout_marginLeft="8dp"
-            android:background="@drawable/selector_item_tag"
-            android:padding="8dp"
-            android:textSize="13sp" />
-
-        <TextView
-            android:id="@+id/gangqin_tv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:layout_marginLeft="8dp"
-            android:background="@drawable/selector_item_tag"
-            android:padding="8dp"
-            android:textSize="13sp"
-            tools:text="钢琴谱" />
-
-        <TextView
-            android:text="其他"
-            android:id="@+id/qita_tv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:layout_marginLeft="8dp"
-            android:background="@drawable/selector_item_tag"
-            android:padding="8dp"
-            android:textSize="13sp" />
-    </com.google.android.flexbox.FlexboxLayout>
+    <com.example.q.pocketmusic.view.widget.view.TopTabView
+        android:id="@+id/top_tab_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:tabs="@array/local_tab_names" />
+</LinearLayout>
 
 
