--- a/app/src/main/res/layout/activity_type_song.xml
+++ b/app/src/main/res/layout/activity_type_song.xml
@@ -45,13 +45,13 @@
 
         </android.support.design.widget.CollapsingToolbarLayout>
 
-        <com.example.q.pocketmusic.view.widget.view.TopTwoTabView
+        <com.example.q.pocketmusic.view.widget.view.TopTabView
             android:id="@+id/type_tab_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            app:Left_Text="曲谱"
-            app:Right_Text="圈子" />
+            app:tabs="@array/type_tab_names"
+           />
 
     </android.support.design.widget.AppBarLayout>
 
