--- a/app/src/main/res/layout/fragment_piano.xml
+++ b/app/src/main/res/layout/fragment_piano.xml
@@ -6,15 +6,6 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <EditText
-        android:id="@+id/title_edt"
-        android:layout_width="match_parent"
-        android:layout_height="32dp"
-        android:layout_margin="8dp"
-        android:background="@drawable/shape_edt"
-        android:gravity="center"
-        android:hint="请输入标题" />
-
     <LinearLayout
         android:id="@+id/parent"
         android:layout_width="match_parent"
@@ -29,64 +20,13 @@
             android:layout_height="match_parent"
             android:layout_marginTop="8dp"
             android:layout_weight="1"
+            android:background="@null"
             android:focusable="false"
             android:lineSpacingExtra="8dp"
             android:maxLines="10"
             android:padding="8dp"
             android:textColor="@color/black"
-            android:textSize="21sp"
-            tools:text="1322156465411111111111111111111111" />
-
-        <LinearLayout
-            android:layout_width="48dp"
-            android:layout_height="match_parent"
-            android:background="@drawable/shape_piano_normal"
-            android:orientation="vertical"
-            android:padding="8dp">
-
-
-            <ImageView
-                android:id="@+id/keep_iv"
-                android:layout_width="wrap_content"
-                android:layout_height="0dp"
-                android:layout_marginTop="8dp"
-                android:layout_weight="1"
-                app:srcCompat="@drawable/ic_vec_keep" />
-
-            <ImageView
-                android:id="@+id/tab_iv"
-                android:layout_width="wrap_content"
-                android:layout_height="0dp"
-                android:layout_marginTop="8dp"
-                android:layout_weight="1"
-                app:srcCompat="@drawable/ic_vec_tab" />
-
-            <ImageView
-                android:id="@+id/enter_iv"
-                android:layout_width="wrap_content"
-                android:layout_height="0dp"
-                android:layout_marginTop="8dp"
-                android:layout_weight="1"
-                app:srcCompat="@drawable/ic_vec_enter" />
-
-            <ImageView
-                android:id="@+id/bo_lang_iv"
-                android:layout_width="wrap_content"
-                android:layout_height="0dp"
-                android:layout_marginTop="8dp"
-                android:layout_weight="1"
-                app:srcCompat="@drawable/ic_vec_bolang" />
-
-            <ImageView
-                android:id="@+id/back_iv"
-                android:layout_width="wrap_content"
-                android:layout_height="0dp"
-                android:layout_marginTop="8dp"
-                android:layout_weight="1"
-                app:srcCompat="@drawable/ic_vec_back" />
-
-        </LinearLayout>
-
+            android:textSize="21sp" />
     </LinearLayout>
 
     <LinearLayout
