--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -32,8 +32,7 @@
         <attr name="Reward_Resource" format="reference" />
     </declare-styleable>
 
-    <declare-styleable name="TopTwoTabView">
-        <attr name="Left_Text" format="string"/>
-        <attr name="Right_Text" format="string"/>
+    <declare-styleable name="TopTabView">
+        <attr name="tabs" format="reference" />
     </declare-styleable>
 </resources>
