--- a/app/src/main/res/layout/fragment_community.xml
+++ b/app/src/main/res/layout/fragment_community.xml
@@ -5,27 +5,17 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <RelativeLayout
+    <android.support.design.widget.TabLayout
+        android:id="@+id/tab_layout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        app:tabGravity="center"
+        app:tabMode="scrollable"/>
 
-        <ImageView
-            android:id="@+id/publish_ask_iv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:srcCompat="@drawable/ic_vec_publish" />
-
-        <com.example.q.pocketmusic.view.widget.view.TopTabView
-            android:id="@+id/top_tab_view"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            app:tabs="@array/community_tab_names" />
-    </RelativeLayout>
-
-
-    <FrameLayout
-        android:id="@+id/seek_content"
+    <android.support.v4.view.ViewPager
+        android:id="@+id/view_pager"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
+
+
 </LinearLayout>
