--- a/app/src/main/res/layout/head_convert_post_view.xml
+++ b/app/src/main/res/layout/head_convert_post_view.xml
@@ -40,8 +40,26 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 tools:text="2017.1.1" />
-        </LinearLayout>
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:srcCompat="@drawable/ic_vec_convert_coin" />
+
+                <TextView
+                    android:id="@+id/convert_coin_tv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginLeft="8dp"
+                    android:textColor="@color/ui_red" />
+            </LinearLayout>
+
+        </LinearLayout>
 
 
         <ImageView
