--- a/app/src/main/res/layout/item_ask_song.xml
+++ b/app/src/main/res/layout/item_ask_song.xml
@@ -68,50 +68,37 @@
     </LinearLayout>
 
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <TextView
-            android:id="@+id/post_user_type_tv"
-            style="@style/ThreeTextThird"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="56dp"
-            tools:text="曲谱类型" />
+        android:layout_height="wrap_content"
+        android:gravity="right|center_vertical">
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:layout_marginRight="56dp"
+            android:layout_marginRight="8dp"
             app:srcCompat="@drawable/ic_vec_hot" />
 
         <TextView
             android:id="@+id/post_user_hot_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_marginRight="40dp"
+            android:layout_marginRight="8dp"
             tools:text="0" />
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:layout_marginRight="16dp"
+            android:layout_marginRight="8dp"
             app:srcCompat="@drawable/ic_vec_comment" />
 
         <TextView
             android:id="@+id/post_user_comment_num_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
             tools:text="0" />
 
-    </RelativeLayout>
+    </LinearLayout>
 
 
 </LinearLayout>
