--- a/app/src/main/res/layout/item_convert_comment_adapter.xml
+++ b/app/src/main/res/layout/item_convert_comment_adapter.xml
@@ -1,7 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/content_ll"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:padding="@dimen/item_padding_16dp">
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/user_head_iv"
+            android:layout_width="@dimen/item_head"
+            android:layout_height="@dimen/item_head"
+            android:src="@mipmap/ico_launcher" />
+
+        <LinearLayout
+            style="@style/TwoTextLinear"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/user_name_tv"
+                style="@style/TwoTextMain"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                tools:text="鹏君" />
+
+            <TextView
+                android:id="@+id/date_tv"
+                style="@style/TwoTextSecond"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                tools:text="2017-02-01" />
+        </LinearLayout>
+
+
+    </LinearLayout>
+
+
+
+    <TextView
+        android:id="@+id/check_part_convert_song_tv"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="right"
+        android:text="查看部分曲谱>>"
+        android:textColor="@color/confetti_red" />
+
+    <View style="@style/HeadDivider" />
 
 </LinearLayout>
