--- a/app/src/main/res/layout/item_home_convert_list.xml
+++ b/app/src/main/res/layout/item_home_convert_list.xml
@@ -61,43 +61,36 @@
     </LinearLayout>
 
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
+        android:layout_height="wrap_content"
+        android:gravity="right|center_vertical">
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:layout_marginRight="56dp"
-            app:srcCompat="@drawable/ic_vec_profile_coin" />
+            android:layout_marginRight="8dp"
+            app:srcCompat="@drawable/ic_vec_convert_coin" />
 
         <TextView
             android:id="@+id/convert_post_user_coin_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_marginRight="40dp"
+            android:layout_marginRight="8dp"
             tools:text="0" />
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:layout_marginRight="16dp"
+            android:layout_marginRight="8dp"
             app:srcCompat="@drawable/ic_vec_comment" />
 
         <TextView
             android:id="@+id/convert_post_user_comment_num_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
             tools:text="0" />
-
-    </RelativeLayout>
+    </LinearLayout>
 
 
 </LinearLayout>
