--- a/app/src/main/res/drawable/shape_piano_pressed.xml
+++ b/app/src/main/res/drawable/shape_piano_pressed.xml
@@ -1,12 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android" >
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:innerRadius="5dp"
+    android:shape="rectangle">
 
     <solid android:color="#A4A4A4" />
-
-    <corners
-        android:bottomLeftRadius="10dp"
-        android:bottomRightRadius="10dp" >
-    </corners>
 
     <stroke
         android:width="2dp"
