--- a/app/src/main/res/drawable/shape_popup_type_bg.xml
+++ b/app/src/main/res/drawable/shape_popup_type_bg.xml
@@ -1,13 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:innerRadius="5dp"
     android:shape="rectangle">
-
+    <solid android:color="@color/white" />
     <stroke
-        android:width="2dp"
+        android:width="1dp"
         android:color="@color/ui_black_3" />
-    <gradient
-        android:angle="270"
-        android:endColor="#ffffff"
-        android:startColor="#f5f5f5" />
+    <corners android:radius="5dp" />
 </shape>
