--- a/app/src/main/res/layout/fragment_home_profile.xml
+++ b/app/src/main/res/layout/fragment_home_profile.xml
@@ -14,7 +14,17 @@
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize" />
+            android:layout_height="?attr/actionBarSize"
+            android:background="@color/colorPrimary">
+
+            <ImageView
+                android:id="@+id/setting_item"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right"
+                android:layout_marginRight="16dp"
+                app:srcCompat="@drawable/ic_vec_profile_setting" />
+        </android.support.v7.widget.Toolbar>
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -58,6 +68,122 @@
 
         <View style="@style/SettingBigDivider" />
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+
+            android:orientation="horizontal">
+
+            <LinearLayout
+                android:id="@+id/contribution_item"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:orientation="vertical">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:srcCompat="@drawable/ic_vec_profile_coin" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="硬币" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/post_item"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:orientation="vertical">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:srcCompat="@drawable/ic_vec_profile_post" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="帖子" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/collection_item"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:orientation="vertical">
+
+                <ImageView
+
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:srcCompat="@drawable/ic_vec_profile_collection" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="收藏" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/share_item"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:orientation="vertical">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:srcCompat="@drawable/ic_vec_profile_share" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="分享" />
+            </LinearLayout>
+
+
+            <LinearLayout
+                android:id="@+id/convert_item"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:orientation="vertical">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:srcCompat="@drawable/ic_vec_profile_convert" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="转谱" />
+            </LinearLayout>
+        </LinearLayout>
+
+        <View style="@style/SettingBigDivider" />
+
         <com.example.q.pocketmusic.view.widget.view.IcoTextItem
             android:id="@+id/support_me_item"
             android:layout_width="match_parent"
@@ -82,62 +208,6 @@
             android:layout_height="wrap_content"
             app:itemTitleIco="@drawable/ic_vec_setting_share"
             app:itemTitleText="分享小口袋" />
-
-        <View style="@style/SettingBigDivider" />
-
-        <com.example.q.pocketmusic.view.widget.view.IcoTextItem
-            android:id="@+id/contribution_item"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:itemTitleIco="@drawable/ic_vec_profile_coin"
-            app:itemTitleText="我的硬币" />
-
-        <View style="@style/SettingDivider" />
-
-        <View style="@style/SettingDivider" />
-
-
-        <com.example.q.pocketmusic.view.widget.view.IcoTextItem
-            android:id="@+id/post_item"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:itemTitleIco="@drawable/ic_vec_profile_post"
-            app:itemTitleText="我的求谱" />
-
-        <com.example.q.pocketmusic.view.widget.view.IcoTextItem
-            android:id="@+id/collection_item"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:itemTitleIco="@drawable/ic_vec_profile_collection"
-            app:itemTitleText="我的收藏" />
-
-        <View style="@style/SettingDivider" />
-
-        <com.example.q.pocketmusic.view.widget.view.IcoTextItem
-            android:id="@+id/share_item"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:itemTitleIco="@drawable/ic_vec_profile_share"
-            app:itemTitleText="我的分享" />
-        <View style="@style/SettingDivider" />
-
-        <com.example.q.pocketmusic.view.widget.view.IcoTextItem
-            android:id="@+id/convert_item"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:itemTitleIco="@drawable/ic_vec_profile_convert"
-            app:itemTitleText="我的转谱" />
-
-
-        <View style="@style/SettingBigDivider" />
-
-
-        <com.example.q.pocketmusic.view.widget.view.IcoTextItem
-            android:id="@+id/setting_item"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:itemTitleIco="@drawable/ic_vec_profile_setting"
-            app:itemTitleText="设置" />
 
         <View style="@style/SettingBigDivider" />
 
