--- a/app/src/main/res/layout/activity_publish_convert.xml
+++ b/app/src/main/res/layout/activity_publish_convert.xml
@@ -7,30 +7,7 @@
 
     <include layout="@layout/include_appbar_toolbar" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        android:layout_marginTop="48dp"
-        android:gravity="center"
-        android:orientation="vertical">
-
-        <ImageView
-            android:layout_width="@dimen/ico_launcher_72dp"
-            android:layout_height="@dimen/ico_launcher_72dp"
-            android:layout_gravity="center"
-            android:layout_marginBottom="8dp"
-            android:layout_marginTop="8dp"
-            android:src="@drawable/ico_tag" />
-
-        <TextView
-            style="@style/TwoTextMain"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:gravity="center"
-            android:text="把音乐装进口袋" />
-    </LinearLayout>
+    <include layout="@layout/include_top_flag" />
 
     <com.example.q.pocketmusic.view.widget.view.TextEdit
         android:id="@+id/title_tet"
@@ -39,13 +16,18 @@
         app:itemIcoResource="@drawable/ic_vec_title"
         app:itemInputHint="请输入标题" />
 
+    <com.example.q.pocketmusic.view.widget.view.TextEdit
+        android:id="@+id/content_tet"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:itemIcoResource="@drawable/ic_vec_content"
+        app:itemInputHint="请输入描述" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        android:layout_marginLeft="32dp"
-        android:layout_marginRight="32dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
         android:gravity="center_vertical">
 
         <TextView
@@ -83,16 +65,14 @@
         android:id="@+id/pic_number_tv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="32dp"
-        android:layout_marginRight="32dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
         android:text="目前已添加 0 张" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        android:layout_marginLeft="32dp"
-        android:layout_marginRight="32dp"
-        android:layout_marginTop="16dp"
+        android:layout_margin="16dp"
         android:orientation="horizontal">
 
         <ImageView
