--- a/app/src/main/res/layout/item_convert_adapter.xml
+++ b/app/src/main/res/layout/item_convert_adapter.xml
@@ -8,7 +8,7 @@
 
     <TextView
         style="@style/TwoTextMain"
-        android:id="@+id/name_tv"
+        android:id="@+id/title_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         tools:text="名字" />
