--- a/app/src/main/res/layout/item_convert_comment_adapter.xml
+++ b/app/src/main/res/layout/item_convert_comment_adapter.xml
@@ -4,56 +4,62 @@
     android:id="@+id/content_ll"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:padding="@dimen/item_padding_16dp">
-
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="16dp"
+        android:gravity="center_vertical">
 
         <ImageView
-            android:id="@+id/user_head_iv"
+            android:id="@+id/convert_comment_user_head_iv"
             android:layout_width="@dimen/item_head"
             android:layout_height="@dimen/item_head"
             android:src="@mipmap/ico_launcher" />
 
-        <LinearLayout
-            style="@style/TwoTextLinear"
-            android:layout_width="0dp"
+        <TextView
+            android:id="@+id/convert_comment_user_name_tv"
+            style="@style/TwoTextMain"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/user_name_tv"
-                style="@style/TwoTextMain"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                tools:text="鹏君" />
-
-            <TextView
-                android:id="@+id/date_tv"
-                style="@style/TwoTextSecond"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                tools:text="2017-02-01" />
-        </LinearLayout>
-
-
+            android:paddingLeft="16dp"
+            tools:text="鹏君" />
     </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:id="@+id/convert_comment_user_title_tv"
+            style="@style/ThreeTextSecond"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp"
+            android:layout_weight="1"
+            android:maxLines="1"
+            tools:text="描述" />
+
+        <TextView
+            android:id="@+id/convert_comment_user_date_tv"
+            style="@style/ThreeTextThird"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="16dp"
+            android:maxLines="1"
+            tools:text="日期" />
+    </LinearLayout>
 
 
     <TextView
         android:id="@+id/check_part_convert_song_tv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginRight="16dp"
         android:gravity="right"
         android:text="查看部分曲谱>>"
         android:textColor="@color/confetti_red" />
-
-    <View style="@style/HeadDivider" />
 
 </LinearLayout>
