--- a/app/src/main/res/layout/item_home_convert_list.xml
+++ b/app/src/main/res/layout/item_home_convert_list.xml
@@ -5,13 +5,15 @@
     android:id="@+id/content_ll"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:padding="@dimen/item_padding_16dp">
+    android:orientation="vertical">
+
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="16dp"
+        android:gravity="center_vertical">
 
         <ImageView
             android:id="@+id/convert_post_user_head_iv"
@@ -19,78 +21,91 @@
             android:layout_height="@dimen/item_head"
             android:src="@mipmap/ico_launcher" />
 
-        <LinearLayout
-            style="@style/TwoTextLinear"
-            android:layout_width="0dp"
+        <TextView
+            android:id="@+id/convert_post_user_name_tv"
+            style="@style/TwoTextMain"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:orientation="vertical">
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <TextView
-                    android:id="@+id/convert_post_user_date_tv"
-                    style="@style/ThreeTextThird"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentRight="true"
-                    tools:text="2017.1.1" />
-
-                <TextView
-                    android:id="@+id/convert_post_user_name_tv"
-                    style="@style/TwoTextMain"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    tools:text="鹏君" />
-            </RelativeLayout>
-
-
-            <TextView
-                android:id="@+id/convert_post_user_title_tv"
-                style="@style/ThreeTextSecond"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:maxLines="1"
-                tools:text="求谱啊啊~~~~" />
-
-
-        </LinearLayout>
-
+            android:paddingLeft="16dp"
+            tools:text="鹏君" />
     </LinearLayout>
 
 
     <LinearLayout
+        android:layout_marginTop="8dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="right|center_vertical">
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="8dp"
-            app:srcCompat="@drawable/ic_vec_convert_coin" />
+        android:layout_height="wrap_content">
 
         <TextView
-            android:id="@+id/convert_post_user_coin_tv"
-            android:layout_width="wrap_content"
+            android:id="@+id/convert_post_user_title_tv"
+            style="@style/ThreeTextSecond"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginRight="8dp"
-            tools:text="0" />
+            android:layout_marginLeft="16dp"
+            android:layout_weight="1"
+            android:maxLines="1"
+            tools:text="谱名" />
 
-        <ImageView
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginRight="8dp"
-            app:srcCompat="@drawable/ic_vec_comment" />
+            android:layout_marginRight="16dp"
+            android:gravity="right|center_vertical">
 
-        <TextView
-            android:id="@+id/convert_post_user_comment_num_tv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            tools:text="0" />
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="8dp"
+                app:srcCompat="@drawable/ic_vec_convert_coin" />
+
+            <TextView
+                android:id="@+id/convert_post_user_coin_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="8dp"
+                tools:text="0" />
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="8dp"
+                app:srcCompat="@drawable/ic_vec_comment" />
+
+            <TextView
+                android:id="@+id/convert_post_user_comment_num_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                tools:text="0" />
+        </LinearLayout>
     </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:id="@+id/convert_post_user_content_tv"
+            style="@style/TwoTextSecond"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp"
+            android:layout_weight="1"
+            android:maxLines="1"
+            tools:text="内容" />
+
+        <TextView
+            android:id="@+id/convert_post_user_date_tv"
+            style="@style/ThreeTextThird"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="16dp"
+            android:gravity="right|center_vertical"
+            tools:text="2017.1.1" />
+    </LinearLayout>
 
 </LinearLayout>
+
+
+
+
+
