--- a/app/src/main/res/layout/view_text_edt.xml
+++ b/app/src/main/res/layout/view_text_edt.xml
@@ -2,10 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="16dp"
-    android:layout_marginLeft="32dp"
-    android:layout_marginRight="32dp"
-    android:layout_marginTop="16dp"
+    android:layout_margin="16dp"
     android:gravity="center"
     android:orientation="vertical">
 
