--- a/app/src/main/res/drawable/ic_vec_type_ask.xml
+++ b/app/src/main/res/drawable/ic_vec_type_ask.xml
@@ -4,18 +4,6 @@
     android:viewportHeight="1024.0"
     android:viewportWidth="1024.0">
     <path
-        android:fillColor="#288CFF"
-        android:pathData="M298.6,567.3l134.7,123.4 246.8,-246.8 -134.6,-123.5z" />
-    <path
-        android:fillColor="#CAE5FF"
-        android:pathData="M556.7,309.2l44.9,-44.9 33.6,-22.4h56.1l44.9,33.6 22.5,67.4 -22.5,44.9 -33.6,44.8h-22.5z" />
-    <path
-        android:fillColor="#FFFFFF"
-        android:pathData="M298.6,567.3L422,701.9l-112.2,44.9 -56.1,-56.1 44.9,-123.4z" />
-    <path
-        android:fillColor="#288CFF"
-        android:pathData="M532.7,698.2c0,8.7 7,15.7 15.7,15.7h239.4c8.7,0 15.7,-7 15.7,-15.7s-7,-15.7 -15.7,-15.7L548.4,682.5c-8.7,-0.1 -15.7,7 -15.7,15.7zM787.8,767.8L434.6,767.8c-8.7,0 -15.7,7 -15.7,15.7s7,15.7 15.7,15.7h353.2c8.7,0 15.7,-7 15.7,-15.7 0.1,-8.7 -7,-15.7 -15.7,-15.7zM446.4,710c0.2,-0.2 0.3,-0.4 0.5,-0.6 0.4,-0.4 0.8,-0.7 1.2,-1.1l252.6,-252.6 47.1,-47.1c19.8,-19.8 30.6,-46 30.6,-74 0,-27.9 -10.9,-54.2 -30.6,-74l-14,-14c-19.8,-19.8 -46,-30.6 -74,-30.6 -27.9,0 -54.2,10.9 -74,30.6L286.2,546.4c-0.4,0.4 -0.7,0.8 -1.1,1.2 -0.2,0.2 -0.4,0.3 -0.6,0.5 -0.6,0.6 -1.2,1.3 -1.7,2.1l-0.2,0.2c-0.1,0.1 -0.1,0.2 -0.2,0.3 -35.5,44.1 -67.1,202.6 -70.6,221.1 -1,5.3 0.7,10.7 4.6,14.4 3,2.8 6.9,4.3 10.9,4.3 1.2,0 2.5,-0.1 3.7,-0.4 17.8,-4.4 171.3,-42.7 213.7,-78.6 0.6,-0.6 1.2,-1 1.7,-1.5zM317.9,559.2L550,327.1l117.4,117.4 -232,232 -117.5,-117.3zM608.2,268.9c13.8,-13.8 32.2,-21.4 51.7,-21.4s37.9,7.6 51.7,21.4l14,14c13.8,13.8 21.4,32.2 21.4,51.7s-7.6,37.9 -21.4,51.7l-36,36 -117.4,-117.4 36,-36zM298.2,584.1l112.5,112.5c-34.2,19 -107.3,41.9 -163,56.7 12.5,-58 32.5,-134.1 50.5,-169.2z" />
-    <path
-        android:fillColor="#288CFF"
-        android:pathData="M253.7,679.5l67.3,67.3 -78.5,22.5 11.2,-89.8z" />
+        android:fillColor="@color/vec_blue"
+        android:pathData="M547.1,769.3c0,11.7 9.7,21.2 21.7,21.2h329.8c12,0 21.7,-9.5 21.7,-21.2 0,-11.7 -9.7,-21.2 -21.7,-21.2L568.8,748.1c-12,0 -21.7,9.5 -21.7,21.2zM898.5,863.1L412,863.1c-12,0 -21.7,9.5 -21.7,21.2 0,11.7 9.7,21.2 21.7,21.2h486.5c12,0 21.7,-9.5 21.7,-21.2 0,-11.7 -9.7,-21.2 -21.7,-21.2zM428.3,785.2c0.2,-0.3 0.4,-0.6 0.7,-0.8 0.5,-0.5 1.2,-1 1.7,-1.5l348,-340.6c0,0 0,-0 0,-0 0,-0 0,-0 0,-0l64.9,-63.5c27.2,-26.6 42.2,-62.1 42.2,-99.7 0,-37.7 -15,-73.1 -42.2,-99.7l-19.2,-18.8c-27.2,-26.6 -63.4,-41.3 -101.9,-41.3 -38.5,0 -74.7,14.7 -101.9,41.3l-412.9,404.1c-0.5,0.5 -1,1.1 -1.5,1.6 -0.3,0.2 -0.6,0.4 -0.9,0.7 -0.9,0.9 -1.6,1.8 -2.3,2.8 -0.1,0.1 -0.2,0.2 -0.2,0.3 -0.1,0.1 -0.2,0.2 -0.2,0.3 -49,59.5 -92.4,273.1 -97.3,298.1 -1.4,7.1 1,14.4 6.3,19.4 4.1,3.8 9.5,5.8 15,5.8a22.4,22.4 0,0 0,5.2 -0.6c24.6,-5.9 236,-57.6 294.4,-106 0.8,-0.6 1.6,-1.2 2.4,-1.9h-0zM251.2,581.9l319.7,-312.9 161.7,158.3 -319.7,312.9 -161.7,-158.2zM651.2,190.5c19,-18.6 44.3,-28.9 71.2,-28.9 26.9,0 52.2,10.3 71.2,28.9l19.2,18.8c19,18.6 29.5,43.4 29.5,69.7 0,26.3 -10.5,51.1 -29.5,69.7l-49.6,48.5 -161.7,-158.3 49.6,-48.5 0,0zM224.1,615.4l155,151.7c-47.2,25.6 -147.8,56.5 -224.5,76.4 17.1,-78.1 44.6,-180.7 69.6,-228v-0zM224.1,615.4" />
 </vector>
