--- a/app/src/main/res/drawable/ic_vec_type_share.xml
+++ b/app/src/main/res/drawable/ic_vec_type_share.xml
@@ -1,6 +1,9 @@
-<vector android:height="32dp" android:viewportHeight="1024.0"
-    android:viewportWidth="1024.0" android:width="32dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#3688FF" android:pathData="M768,810.7c-23.6,0 -42.7,-19.1 -42.7,-42.7s19.1,-42.7 42.7,-42.7c94.1,0 170.7,-76.6 170.7,-170.7 0,-89.6 -70.1,-164.3 -159.5,-170.1L754,383l-10.7,-22.7c-42.2,-89.3 -133,-147 -231.3,-147s-189.1,57.7 -231.3,147L270,383l-25.1,1.6c-89.5,5.8 -159.5,80.5 -159.5,170.1 0,94.1 76.6,170.7 170.7,170.7 23.6,0 42.7,19.1 42.7,42.7s-19.1,42.7 -42.7,42.7c-141.2,0 -256,-114.8 -256,-256 0,-126.1 92.5,-232.5 214.7,-252.4C274.8,195.7 388.9,128 512,128s237.2,67.7 297.3,174.2C931.5,322.1 1024,428.6 1024,554.7c0,141.1 -114.8,256 -256,256z"/>
-    <path android:fillColor="#5F6379" android:pathData="M640,789.3c-10.9,0 -21.8,-4.2 -30.2,-12.5L512,679l-97.8,97.8c-16.6,16.7 -43.7,16.7 -60.3,0 -16.7,-16.7 -16.7,-43.7 0,-60.3l128,-128c16.6,-16.7 43.7,-16.7 60.3,0l128,128c16.7,16.7 16.7,43.7 0,60.3 -8.4,8.4 -19.3,12.5 -30.2,12.5z"/>
-    <path android:fillColor="#5F6379" android:pathData="M512,960c-23.6,0 -42.7,-19.1 -42.7,-42.7V618.7c0,-23.6 19.1,-42.7 42.7,-42.7s42.7,19.1 42.7,42.7v298.7c0,23.5 -19.1,42.6 -42.7,42.6z"/>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="32dp"
+    android:height="32dp"
+    android:viewportHeight="1024.0"
+    android:viewportWidth="1024.0">
+    <path
+        android:fillColor="@color/vec_red"
+        android:pathData="M820.9,393.3 L706.5,393.3l0,47.6 114.3,0c26.3,0 47.6,21.3 47.6,47.6l0,338.6c0,26.3 -21.3,47.6 -47.6,47.6L201.9,874.8c-26.3,0 -47.6,-21.3 -47.6,-47.6L154.3,488.6c0,-26.3 21.3,-47.6 47.6,-47.6l114.3,0 0,-47.6L201.9,393.3c-52.6,0 -95.2,42.6 -95.2,95.2l0,338.6c0,52.6 42.6,95.2 95.2,95.2l619,0c52.6,0 95.2,-42.6 95.2,-95.2L916.1,488.6C916.1,436 873.5,393.3 820.9,393.3zM355,308.8l132.6,-132.6 0,445.7c0,13.2 10.6,23.8 23.8,23.8 13.2,0 23.8,-10.6 23.8,-23.8L535.2,178.9l129.6,129.9c4.7,4.7 10.8,7 16.9,7 6.1,0 12.2,-2.3 16.8,-7 9.3,-9.3 9.3,-24.4 0,-33.7L526.9,103.2c-4.4,-4.5 -10.5,-7 -16.8,-7 -0,0 -0,0 -0,0 -6.3,0 -12.3,2.5 -16.8,7L321.3,275.1c-9.3,9.3 -9.3,24.4 0,33.7C330.6,318.1 345.7,318.1 355,308.8z" />
 </vector>
