--- a/app/src/main/res/layout/activity_gift.xml
+++ b/app/src/main/res/layout/activity_gift.xml
@@ -7,7 +7,24 @@
     android:orientation="vertical"
     tools:context="com.example.q.pocketmusic.module.user.notify.gift.GiftActivity">
 
-    <include layout="@layout/include_appbar_toolbar" />
+    <android.support.design.widget.AppBarLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:id="@+id/app_bar"
+        android:layout_height="wrap_content">
+
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize">
+            <ImageView
+                android:layout_marginRight="16dp"
+                android:layout_gravity="right"
+                android:id="@+id/received_coin_iv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:srcCompat="@drawable/ic_vec_received_coin"/>
+        </android.support.v7.widget.Toolbar>
+    </android.support.design.widget.AppBarLayout>
     <com.jude.easyrecyclerview.EasyRecyclerView
         android:id="@+id/recycler"
         android:layout_width="match_parent"
