--- a/app/src/main/res/layout/item_convert_comment_adapter.xml
+++ b/app/src/main/res/layout/item_convert_comment_adapter.xml
@@ -30,17 +30,34 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp">
 
         <TextView
             android:id="@+id/convert_comment_user_title_tv"
             style="@style/ThreeTextSecond"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="16dp"
+
             android:layout_weight="1"
             android:maxLines="1"
             tools:text="描述" />
+
+        <TextView
+            android:id="@+id/check_number_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            tools:text="查看数：1" />
+
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp">
 
         <TextView
             android:id="@+id/convert_comment_user_date_tv"
@@ -50,16 +67,16 @@
             android:layout_marginRight="16dp"
             android:maxLines="1"
             tools:text="日期" />
+
+        <TextView
+            android:id="@+id/check_part_convert_song_tv"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="16dp"
+            android:gravity="right"
+            android:text="查看部分曲谱>>"
+            android:textColor="@color/confetti_red" />
     </LinearLayout>
 
-
-    <TextView
-        android:id="@+id/check_part_convert_song_tv"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginRight="16dp"
-        android:gravity="right"
-        android:text="查看部分曲谱>>"
-        android:textColor="@color/confetti_red" />
 
 </LinearLayout>
