硬币榜，解决部分泄漏问题

--- a/app/src/main/res/layout/activity_coin_rank.xml
+++ b/app/src/main/res/layout/activity_coin_rank.xml
@@ -40,7 +40,7 @@
                     tools:text="鹏君" />
 
                 <TextView
-                    android:id="@+id/contribution_tv"
+                    android:id="@+id/my_coin_tv"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/nick_name_tv"
