--- a/app/src/main/res/layout/activity_other_profile.xml
+++ b/app/src/main/res/layout/activity_other_profile.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.example.q.pocketmusic.module.user.other.OtherProfileActivity">
+    tools:context=".module.home.profile.user.other.OtherProfileActivity">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
