--- a/app/src/main/res/layout/activity_support.xml
+++ b/app/src/main/res/layout/activity_support.xml
@@ -45,7 +45,13 @@
         android:background="@drawable/shape_button"
         android:gravity="center"
        android:text="点击复制支付宝号" />
-
+    <TextView
+        android:id="@+id/get_dimension_tv"
+        android:layout_width="match_parent"
+        android:layout_height="36dp"
+        android:background="@drawable/shape_button"
+        android:gravity="center"
+        android:text="点击获取二维码" />
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
