--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -8,7 +8,7 @@
 
     <include layout="@layout/include_appbar_toolbar" />
 
-    <include layout="@layout/include_top_logo" />
+    <include layout="@layout/include_top_flag" />
 
 
     <TextView
