--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -28,6 +28,6 @@
             android:layout_marginLeft="8dp"
             android:ellipsize="marquee"
             android:focusable="true"
-            android:maxLines="1" />
+            android:singleLine="true" />
     </LinearLayout>
 </RelativeLayout>
